Update 'spmph2hm0-python' component image to: quay.io/rhtap_qe/rhtap-qe:cfa5fe64483307c7dc9d518b0cc1e36826e9a9fa@sha256:352ede13d30abd3fa0a140ca10212f7a04e3c05074c4f98391be25d337b35fb2

--- a/components/spmph2hm0-python/overlays/development/deployment-patch.yaml
+++ b/components/spmph2hm0-python/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: spmph2hm0-python
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe:cfa5fe64483307c7dc9d518b0cc1e36826e9a9fa@sha256:352ede13d30abd3fa0a140ca10212f7a04e3c05074c4f98391be25d337b35fb2
+          name: container-image
